--- a/Caixa/package.json
+++ b/Caixa/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Caixa",
+  "name": "caixa",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "facundosDev",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^2.3.1",
+    "cordova-sqlite-storage": "^5.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
