--- a/Caixa/package.json
+++ b/Caixa/package.json
@@ -22,6 +22,7 @@
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@ionic-native/core": "^5.31.1",
+    "@ionic-native/sqlite": "^5.31.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage": "^2.3.1",
     "cordova-sqlite-storage": "^5.1.0",
